--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,27 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "idez/laravel-bankly-sdk",
+    "description": "This is my package laravel-bankly-sdk",
     "keywords": [
-        ":vendor_name",
+        "Idez",
         "laravel",
-        ":package_slug"
+        "laravel-bankly-sdk"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/idezdigital/laravel-bankly-sdk",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Idez Digital",
+            "email": "developers@idez.com.br",
             "role": "Developer"
         }
     ],
     "require": {
         "php": "^8.1",
         "spatie/laravel-package-tools": "^1.9.2",
-        "illuminate/contracts": "^9.0"
+        "illuminate/contracts": "^9.0",
+        "illuminate/http": "^9.0",
+        "illuminate/support": "^9.0",
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
         "nunomaduro/collision": "^6.0",
@@ -34,13 +37,13 @@
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
+            "Idez\\Bankly\\": "src",
+            "Idez\\Bankly\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "Idez\\Bankly\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -49,15 +52,19 @@
         "test-coverage": "vendor/bin/pest --coverage"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "phpstan/extension-installer": true
+        }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Idez\\Bankly\\BanklyServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "Bankly": "Idez\\Bankly\\Facades\\Bankly"
             }
         }
     },
