--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,12 @@
     ],
     "require": {
         "php": "^8.1",
-        "spatie/laravel-package-tools": "^1.9.2",
         "illuminate/contracts": "^9.0",
         "illuminate/http": "^9.0",
         "illuminate/support": "^9.0",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0",
+        "spatie/laravel-data": "^1.4",
+        "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
         "nunomaduro/collision": "^6.0",
