--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^8.1",
+        "guzzlehttp/guzzle": "^7.4",
         "illuminate/contracts": "^9.0",
         "illuminate/http": "^9.0",
         "illuminate/support": "^9.0",
