--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,6 @@
         "illuminate/http": "^8.0|^9.0",
         "illuminate/support": "^8.0|^9.0",
         "psr/http-message": "^1.0",
-        "spatie/laravel-data": "^1.4",
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
@@ -34,8 +33,7 @@
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5",
-        "spatie/laravel-ray": "^1.26"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
