Fix run-tests yml idetation

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,10 +17,10 @@ jobs:
         laravel: [8.*, ^8.73]
         stability: [prefer-lowest, prefer-stable]
         include:
-          - laravel: '8.73'
-          - testbench: '6.23'
-          - laravel: '9.*'
-            testbench: '7.*'
+          - laravel: 8.73
+            testbench: 6.23
+          - laravel: 9.*
+            testbench: 7.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
