--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,10 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.4",
-        "illuminate/contracts": "^8.0|^9.0",
-        "illuminate/http": "^8.0|^9.0",
-        "illuminate/support": "^8.0|^9.0",
+        "illuminate/console": "^8.73|^9.0",
+        "illuminate/contracts": "^8.73|^9.0",
+        "illuminate/http": "^8.73|^9.0",
+        "illuminate/support": "^8.73|^9.0",
         "psr/http-message": "^1.0",
         "spatie/laravel-package-tools": "^1.9.2"
     },
