--- a/composer.json
+++ b/composer.json
@@ -27,14 +27,14 @@
     },
     "require-dev": {
         "nunomaduro/collision": "^6.0",
+        "nunomaduro/larastan": "^1.0|^2.0",
         "orchestra/testbench": "^6.0|^7.0",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5",
-        "symfony/console": "^5.0|^6.0"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
