--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "symfony/console": "^4.0|^6.0"
     },
     "autoload": {
         "psr-4": {
