--- a/composer.json
+++ b/composer.json
@@ -28,14 +28,17 @@
     "require-dev": {
         "nunomaduro/collision": "^6.0",
         "nunomaduro/larastan": "^1.0|^2.0",
-        "orchestra/testbench": "^6.0|^7.0",
+        "orchestra/testbench": "^6.23|^7.0",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^9.5",
-        "symfony/console": "^4.0|^6.0"
+        "symfony/console": "^5.3|^6.0",
+        "symfony/http-foundation": "^5.3|^6.0",
+        "symfony/process": "^5.3|^6.0",
+        "symfony/psr-http-message-bridge": "^2.1"
     },
     "autoload": {
         "psr-4": {
