--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^9.5",
-        "symfony/console": "^5.3|^6.0",
+        "symfony/console": "^5.3",
         "symfony/http-foundation": "^5.3|^6.0",
         "symfony/process": "^5.3|^6.0",
         "symfony/psr-http-message-bridge": "^2.1"
