--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
-        "nunomaduro/collision": "^6.0",
+        "nunomaduro/collision": "^5.0|^6.0",
         "nunomaduro/larastan": "^1.0|^2.0",
         "orchestra/testbench": "^6.23|^7.0",
         "pestphp/pest": "^1.21",
@@ -35,7 +35,6 @@
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^9.5",
-        "symfony/console": "^5.3",
         "symfony/http-foundation": "^5.3|^6.0",
         "symfony/process": "^5.3|^6.0",
         "symfony/psr-http-message-bridge": "^2.1"
