--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "nunomaduro/larastan": "^1.0|^2.0",
         "orchestra/testbench": "^6.23|^7.0",
         "pestphp/pest": "^1.21",
+        "pestphp/pest-plugin-faker": "^1.0",
         "pestphp/pest-plugin-laravel": "^1.1",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
