--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -36,4 +36,7 @@
     <logging>
         <junit outputFile="build/report.junit.xml"/>
     </logging>
+    <php>
+        <server name="XDEBUG_MODE" value="coverage"/>
+    </php>
 </phpunit>
