--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Execute tests
         env:
           SESSION_DRIVER: array
-        run: vendor/bin/pest --coverage-clover clover.xml
+        run: vendor/bin/pest
 
       - name: Generate test coverage badge
         uses: timkrase/phpunit-coverage-badge@v1.2.0
