--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -51,6 +51,7 @@ jobs:
         run: vendor/bin/pest
 
       - name: Generate test coverage badge
+        if: ${{ matrix.os }} == "ubuntu-latest"
         uses: timkrase/phpunit-coverage-badge@v1.2.0
         with:
           coverage_badge_path: 'badge-coverage.svg'
