--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -50,8 +50,8 @@ jobs:
           SESSION_DRIVER: array
         run: vendor/bin/pest
 
-      - name: Generate test coverage badge
-        if: ${{ matrix.os }} == "ubuntu-latest"
+      - if: ${{ matrix.os }} == "ubuntu-latest"
+        name: Generate test coverage badge
         uses: timkrase/phpunit-coverage-badge@v1.2.0
         with:
           coverage_badge_path: 'badge-coverage.svg'
