--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         php: [8.1]
         laravel: [9.*, ^8.73]
         stability: [prefer-lowest, prefer-stable]
@@ -50,8 +50,8 @@ jobs:
           SESSION_DRIVER: array
         run: vendor/bin/pest
 
-      - if: ${{ matrix.os }} == "ubuntu-latest"
-        name: Generate test coverage badge
+      - name: Generate test coverage badge
+        if: ${{ matrix.os }} == "ubuntu-latest"
         uses: timkrase/phpunit-coverage-badge@v1.2.0
         with:
           coverage_badge_path: 'badge-coverage.svg'
